--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,15 +42,17 @@
 	}
 	
     footer {
-		padding-top: 20px;
 		background-color: #fff;
-		height: 1em;
 		position: relative;
-		bottom: -40px;
+		bottom: -20px;
+		margin-top: 10px;
+		padding-left: 5px;
+		padding-right: 5px;
+		padding-top: 20px;
     }
     
     body {
-      padding-bottom: 20px;
+      padding-bottom: 10px;
       color: #5a5a5a;
       background: url('../img/woodback.jpg') no-repeat center center fixed;
 	  -webkit-background-size: cover;
