--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,22 +33,13 @@
 		background-color: #EEE;
 
 	}
-   
-	.wrapper {
-		min-height: 100%;
-		height: auto !important;
-		height: 100%;
-		margin: 0 auto -4em;
-	}
 	
     footer {
+		display: block;
 		background-color: #fff;
-		position: relative;
-		bottom: -20px;
-		margin-top: 10px;
-		padding-left: 5px;
-		padding-right: 5px;
-		padding-top: 20px;
+		padding-right: 10px;
+		padding-left: 10px;
+
     }
     
     body {
@@ -75,7 +66,6 @@
 
     /* Remove border and change up box shadow for more contrast */
     .navbar .navbar-inner {
-
       border: 0;
       -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
@@ -123,7 +113,7 @@
     }
 
     .carousel .item {
-      height: 720px;
+      height: 680px;
     }
     .carousel img {
       min-width: 100%;
@@ -169,13 +159,14 @@
         margin-bottom: 0;
         width: auto;
       }
+      
       .navbar-inner {
         border-radius: 0;
         margin: -20px 0;
       }
 
       .carousel .item {
-        height: 680px;
+        height: 600px;
       }
       .carousel img {
         width: auto;
@@ -216,7 +207,9 @@
         margin-left: -20px;
         margin-right: -20px;
       }
-      
+      .carousel item {
+		height: 350px;
+      }
   
       .carousel img {
         height: 300px;
@@ -288,8 +281,12 @@
 	}
 	
 	footer {
-		padding-top: 0px;
-		height: 4.2em;
+		padding-top: 5px;
 	}
+	
+	.phone {
+		font-size: 23px;
+	}
+	
 
     }
