Cleaned more code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,8 @@
 	  padding-left: 10px;
 	}
 	
-	.wyomapeople h5, .wyomapeople p {
+	.wyomapeople h5, 
+	.wyomapeople p {
 	  line-height: 1;
 	}
 
@@ -95,7 +96,7 @@
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 100px;
+      margin-bottom: 50px;
     }
 
     .carousel .container-fluid {
@@ -198,6 +199,7 @@
       .carousel {
         margin-left: -20px;
         margin-right: -20px;
+        margin-bottom: -60px;
       }
       .carousel item {
 		height: 350px;
