--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,9 +61,8 @@
 	  color: #fff;
 	}
 	
-    /* THE NAVBAR
+    /* NAVBAR
     -------------------------------------------------- */
-
     /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
       position: relative;
@@ -196,8 +195,7 @@
 	    bottom: 40px;
 	    margin-left: 75px;
 	    font-size: 18px;
-	  }
-	  
+	  }  
     } /* End @media (max-width: 979px) */
 
     @media (max-width: 767px) {
@@ -293,9 +291,6 @@
 	  .phonecaption {
 	    bottom: 40px;
 	    margin-left: 90px;
-	    font-size: 16px;
-	  }
-	  
-	  
-	  
+	    font-size: 14px;
+	  }  
     } /* End @media (max-width: 767px) */
