--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,8 @@
     .navbar-wrapper {
       position: relative;
       z-index: 10;
-	  margin-top: 20px;
-      margin-bottom: 10px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+	  margin-top: 0;
+      margin-bottom: -15px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
     }
 
     /* Remove border and change up box shadow for more contrast */
