Fixed some responsive css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@
       position: relative;
       z-index: 10;
 	  margin-top: 0;
-      margin-bottom: -20px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+     margin-bottom: -20px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
     }
 
     /* Remove border and change up box shadow for more contrast */
@@ -157,6 +157,7 @@
     @media (max-width: 979px) {
 
       .container.navbar-wrapper {
+        margin-top: 20px;
         margin-bottom: 0;
         width: auto;
       }
