--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,17 @@
 	  display: block;
 	  background-color: #eee;
 	}
+
+    .greyglass {
+      padding: 15px;
+      background: #333333;
+      background: rgba(0, 0, 0, 0.75);
+      color: #fff;
+      margin-top: -45px;
+      -moz-border-radius: 4px;
+	   -webkit-border-radius: 4px;
+	   border-radius: 4px; 
+    }
 	
     footer {
 	  display: block;
@@ -116,7 +127,7 @@
     }
 
     .carousel .item {
-      height: 680px;
+      height: 715px;
     }
     .carousel img {
       min-width: 100%;
@@ -130,9 +141,9 @@
 	
     .carousel-caption {
 	  margin-left: 10px;
-      padding: 0 20px;
+      padding: 15px;
       position: relative;
-      top: 5px;
+      top: 0;
       width: 95%;
       -moz-border-radius: 4px;
 	  -webkit-border-radius: 4px;
