--- a/wyomabackup/wyomafilms.com/public/assets/css/bootstrap.css
+++ b/wyomabackup/wyomafilms.com/public/assets/css/bootstrap.css
@@ -3783,7 +3783,7 @@ input[type="submit"].btn.btn-mini {
 
 .nav > li > a:hover {
   text-decoration: none;
-  background-color: #fff;
+  background-color: #eeeeee;
 }
 
 .nav > .pull-right {
