--- a/wyomabackup/wyomafilms.com/public/assets/css/style.css
+++ b/wyomabackup/wyomafilms.com/public/assets/css/style.css
@@ -16,52 +16,38 @@
    	.whitewrapper {
 	  display: block;
 	  background-color: #eee;
-      background: url('../img/bluetexture.jpg') repeat;
 	}
 
     .greyglass {
-      padding: .95em;
-      background: #333;
+      padding: 15px;
+      background: #333333;
       background: rgba(0, 0, 0, 0.75);
       color: #fff;
-      margin-top: -3.75em;
-      -moz-border-radius: 6px;
-	   -webkit-border-radius: 6px;
-	   border-radius: 6px; 
+      margin-top: -45px;
     }
-
-    .hero-unit {
-        background: url('../img/whitey.png') repeat;
-    }
-    
+	
     footer {
 	  display: block;
-	  /*
-       * background-color: #254117;
-       */
-	  padding: .8em;
-	  color: grey;
+	  background-color: #254117;
+	  padding: 10px;
+	  color: white;
 	  position:relative;
-	  bottom: -.8em;
-      background: url('../img/whitey.png') repeat;
+	  bottom: -10px;
     }
     
     body {
-      padding-bottom: .8em;
+      padding-bottom: 10px;
       color: #5a5a5a;
-     /* background: url('../img/vintage_6.jpg') repeat-y;  */
-     
-      background: url('../img/vintage_6.jpg') no-repeat center center fixed;
+      background: url('../img/woodback.jpg') no-repeat center center fixed;
 	  -webkit-background-size: cover;
 	  moz-background-size: cover;
 	  -o-background-size: cover;
 	  background-size: cover;
-    
     }
 	
 	/* About */
 	.about h3 {
-	  padding-left: .8em;
+	  padding-left: 10px;
 	}
 	
 	.wyomapeople h5, 
@@ -71,25 +57,26 @@
 
 	/* Contact */
 	.conform {
-	  padding: 0 .8em;
+	  padding: 0 10px;
 	  width: 100%;
 	}
 	
 	.phonecaption {
 	  position: relative;
 	  bottom: 40px;
-	  margin-left: 6em;
-	  font-size: 1.8em;
+	  margin-left: 150px;
+	  font-size: 22px;
 	  color: #fff;
 	}
 	
     /* NAVBAR
     -------------------------------------------------- */
+    /* Special class on .container surrounding .navbar, used for positioning it into place. */
     .navbar-wrapper {
       position: relative;
       z-index: 10;
-	  margin-top: 0;
-     margin-bottom: -20px; 
+	  margin-top: 20px;
+     margin-bottom: -20px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
     }
 
     /* Remove border and change up box shadow for more contrast */
@@ -98,23 +85,8 @@
       -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);
          -moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);
               box-shadow: 0 2px 10px rgba(0,0,0,.25);
-      background: #333;
-      background: rgba(0, 0, 0, 0.75);
     }
 
-    .navbar-inverse .nav .active > a,
-    .navbar-inverse .nav .active > a:hover,
-    .navbar-inverse .nav .active > a:focus {
-      background: #38c;
-      background: rgba(0, 0, 0, 0.75);
-    }
-
-    .nav > li > a:hover {
-        background-color: green;
-        opacity: .8;
-        filter:alpha(opacity=80); /* For IE8 and earlier */
-    }
-    
     /* Downsize the brand/project name a bit */
     .navbar .brand {
       padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
@@ -165,20 +137,18 @@
     }
 	
     .carousel-caption {
-      background: url('../img/bluetexture.jpg') repeat;
-	   margin-left: auto;
-      margin-right: auto;
+	  margin-left: 10px;
       padding: 15px;
       position: relative;
-      top: -2px;
-      width: 70%;
+      top: 0;
+      width: 95%;
       -moz-border-radius: 4px;
 	  -webkit-border-radius: 4px;
 	  border-radius: 4px; 
     }
     .carousel-caption h1 {
-      color: black;
-	  
+	  color: #2A4480;
+	  text-shadow: 0 1px 1px rgba(0,0,0,.4);
       line-height: 1.25;
       margin: 0;
     }
@@ -186,8 +156,8 @@
     .carousel-caption .lead {
       margin: 0;
       line-height: 1.25;
-      color: brown;
-
+      color: #fff;
+      text-shadow: 0 1px 1px rgba(0,0,0,.4);
     }
 
     /* RESPONSIVE CSS
@@ -197,7 +167,6 @@
       .container.navbar-wrapper {
         margin-bottom: 0;
         width: auto;
-        margin-top: 20px;
       }
       
       .navbar-inner {
@@ -206,7 +175,7 @@
       }
 
       .carousel .item {
-        height: 640px;
+        height: 600px;
       }
       .carousel img {
         width: auto;
@@ -219,7 +188,7 @@
 	  }
 	  
 	  .carousel-caption {
-	    width: auto;
+	    width: 85%;
 	  }
 
 	  .hero-unit {
@@ -232,10 +201,9 @@
 	  
 	  .phonecaption {
 	    bottom: 40px;
-        margin-left: 4.5em;
-        font-size: 1.4em;
-	  }
-      
+	    margin-left: 75px;
+	    font-size: 18px;
+	  }  
     } /* End @media (max-width: 979px) */
 
     @media (max-width: 767px) {
@@ -274,8 +242,8 @@
       .carousel-caption {
         padding: 20px;
         width: 70%;
+        margin-left: 25px;
       }
-      
       .carousel-caption h1 {
         font-size: 28px;
         line-height: 1;
@@ -325,11 +293,12 @@
       }
 
 	  .phone {
-	    font-size: 1.45em;
+	    font-size: 23px;
 	  }
 	  
 	  .phonecaption {
 	    bottom: 40px;
-        margin-left: 5.5em;
+	    margin-left: 90px;
+	    font-size: 14px;
 	  }  
     } /* End @media (max-width: 767px) */
